--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "near-cli": "^3.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "near-api-js": "^1.1.0",
+    "node-fetch": "^3.3.0"
+  }
 }
